# ml-experiments

./: .gitignore  LICENSE  README.md  historical_training_dataset.json  log_training_dataset.json  pyproject.toml  triplets_dataset.json
.claude/: settings.local.json
ml_experiments/: AGENT_FRAMEWORKS_README.md  bm25_in_local.py  clustering.py  create_bert_ner.py  create_synthetic_misspellings.py  create_synthetic_ner_data.py  cross_encoder_training.py  dataset_download.py  deepcae_embedding.py  finetune_bge.py  flagembedding.py  generic_download_huggingface.py  gliner_ner_model.py  google_adk_tutorial.py  langchain_tutorial.py  langgraph_tutorial.py  mnrl_training.py  model_download.py  prune_quantize_lora.py  quantisation_model.py  ranking_metrics.py  sasrec_embedding.py  setfit_model.py  sglang_inference.py  sparse_encoder_training.py  synthetic_browsing_data.py  synthetic_txn_data.py  t5_misspellings.py  text_class_train.py  transaction_tags.py  triplet_mining.py  user_shallow_agg.py  worker_script.sh
ml_experiments/retrieval_engine/: Readme.md  adaptk.py  backtranslation.py  evol_instruct.py  get_ground_truth.py  inference.py  project_definition.md  result.ipynb  tag_cleaning.py  taxonomy_creation.py
ml_experiments/training/: convert_to_bge.py  models.txt  prepare_data.py  train.py  train_script.sh
ml_experiments/user_persona/: bert_training.py  fit_model.py  log_data_processor.py  two_tower.py  user_temporal_features.py
